@@ -58,7 +58,9 @@ setMethod("[", "SpatialPolygonsDataFrame", function(x, i, j, ... , drop = TRUE) 
     if (any(is.na(i))) stop("NAs not permitted in row index")
     #SpatialPolygonsDataFrame(as(x, "SpatialPolygons")[i, , drop = FALSE],
     #    data = x@data[i, j, drop = FALSE], match.ID = FALSE)
-	x@data = x@data[i, j, ..., drop = FALSE]
+        y <- new("SpatialPolygonsDataFrame")
+        y@proj4string <- x@proj4string
+	y@data = x@data[i, j, ..., drop = FALSE]
 	if (is.logical(i)) {
 		if (length(i) == 1 && i)
 			i = 1:length(x@polygons)
@@ -68,18 +70,18 @@ setMethod("[", "SpatialPolygonsDataFrame", function(x, i, j, ... , drop = TRUE) 
                 i <- match(i, row.names(x))
         }
 
-	x@polygons = x@polygons[i]
+	y@polygons = x@polygons[i]
 #	x@bbox <- .bboxCalcR(x@polygons)
-        x@bbox <- .Call("bboxCalcR_c", x@polygons, PACKAGE="sp")
+        y@bbox <- .Call("bboxCalcR_c", y@polygons, PACKAGE="sp")
         if (is.numeric(i) && i < 0) {
 #             area <- sapply(x@polygons, function(y) y@area)
 #             x@plotOrder <- as.integer(order(area, decreasing=TRUE))
-              x@plotOrder <- .Call("SpatialPolygons_plotOrder_c",
-                  x@polygons, PACKAGE="sp")
+              y@plotOrder <- .Call("SpatialPolygons_plotOrder_c",
+                  y@polygons, PACKAGE="sp")
         } else {
-	    x@plotOrder = order(match(i, x@plotOrder))
+	    y@plotOrder = order(match(i, x@plotOrder))
         }
-	x
+	y
 ###
 ### RSB: do something with labelpoints here? How can I check they are present?
 ### (label points belong to the Polygons objects, not the SpatialPolygons object)
